...
    <string name="recover_page_recover_message">Enter your email address and we will send you a link to reset your password</string>

    <!--welcome-->
    <string name="welcome_page_welcome">Welcome to</string>
    <string name="welcome_page_welcome_message">You are only a couple of steps away from joining a network of bookworms just like yourself</string>
    <string name="welcome_create_account">CREATE AN ACCOUNT</string>
    <string name="welcome_login">ALREADY SIGNED UP? LOGIN</string>

    <!--borrowed-->
    <string name="borrowed_borrowed">Borrowed</string>
    <string name="borrowed_requested">Requested</string>
    <string name="borrowed_accepted">Accepted</string>

    <!--owned-->
    <string name="owned_available">Available</string>
    <string name="owned_requests">Requests</string>
    <string name="owned_accepted">Accepted</string>
    <string name="owned_lent">Lent</string>

    <!--notification channels-->
    <string name="channel_name">PostNotifications</string>
    <string name="channel_description">Used for post notifications</string>
</resources>
