...
            android:hint="@string/email"
            app:startIconDrawable="@drawable/email_icon"
            app:startIconContentDescription="Email Icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>
...
            android:hint="@string/password"
            app:startIconDrawable="@drawable/lock_icon"
            app:startIconContentDescription="Password Icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_login"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/login_page_login"/>
...
            android:textColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:background="@drawable/spinner_background"

        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
...
